--- a/Robotic_Arm/MDK-ARM/.vscode/settings.json
+++ b/Robotic_Arm/MDK-ARM/.vscode/settings.json
@@ -3,6 +3,7 @@
         "servo.h": "c",
         "kinematic_solution.h": "c",
         "stm32f4xx_hal.h": "c",
-        "dma.h": "c"
+        "dma.h": "c",
+        "bsp_usart.h": "c"
     }
 }
